--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,9 +7,32 @@ body {
     color: #CCCCCC;
 }
 
+.banner {
+    text-align: center;
+    margin-bottom: 25px;
+    font-family: 'Roboto', serif;
+    
+}
+
 select {
     color: #002A3A;
+    text-overflow: ellipsis;
+    max-width: 200px;
+    
 }
+
+#left-column {
+    margin-right: 60px;
+
+}
+
+
+#song-detail {
+    margin-right: 20px;
+
+}
+
+/* Table Formats */
 
 table td {  
     background-color:rgba(152, 154, 155, .25);
@@ -28,14 +51,6 @@ table td a {
 
 table td a:hover, table td a:active {
     color: #CCCCCC; 
-}
-
-
-.banner {
-    text-align: center;
-    margin-bottom: 25px;
-    font-family: 'Roboto', serif;
-    
 }
 
 .form-label {
