--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -39,6 +39,15 @@ select {
     width: 230px;
 }
 
+#youtube-container .four.columns {
+    width:400px !important;
+    margin-right:4% !important;
+}
+
+#youtube-container .four.columns:nth-of-type(2) {
+    margin-left:0 !important;
+}
+
 #topic-search {
     max-width: 160px;
 }
