Corrected CSS for lyric api

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -100,6 +100,10 @@ table td:hover > a, table td:active > a {
     border: 1px solid grey;
 }
 
+#lyric-container {
+    white-space: pre-wrap;
+}
+
 .top-right {
     position: absolute;
     top: 10px;
